--- a/workflow/notebooks/analyze-variant-patterns.Rmd
+++ b/workflow/notebooks/analyze-variant-patterns.Rmd
@@ -78,12 +78,14 @@ merged.df = read_csv(merged.variant.calls.data, show_col_types = FALSE)
 
 Let's see what the distribution of allele frequencies are across all of our samples. This includes the isolates and fixed variants. 
 
-```{r Frequency Distribution, echo=T, fig.align='center', fig.width=3, fig.height=3}
+```{r Frequency Distribution, echo=T, fig.align='center', fig.width=6, fig.height=6}
 
 merged.df %>% 
   ggplot(aes(x = AF)) + 
     geom_histogram(bins = 30) +
     theme_bw()
+
+ggsave("frequency_distribution.png", width = 6, height = 6, dpi = 300)
 
 ```
 
@@ -100,7 +102,7 @@ fixed.isolate.variants = merged.df %>%
 
 In total, there are `r length(fixed.isolate.variants)` fixed in the stock that was used to innoculate the donors. 
 
-```{r Frequency Distribution no Fixed, echo=T, fig.align='center', fig.width=3, fig.height=3}
+```{r Frequency Distribution no Fixed, echo=T, fig.align='center', fig.width=6, fig.height=6}
 
 merged.df %>% 
   filter(!SNP %in% fixed.isolate.variants) %>% 
@@ -108,11 +110,13 @@ merged.df %>%
     geom_histogram(bins = 30) +
     theme_bw()
 
+ggsave("frequency_distribution_no_fixed_isolate_SNPs.png", width = 6, height = 6, dpi = 300)
+
 ```
 
 We can see that there are still some fixed variants. There are likely variants that fixed either during transmission or over the course of the infection. Let's get a better idea of this by plotting the distribution in frequency by condition, specifically, whether the alleles came from the donor or the recipient. 
 
-```{r Frequency Distribution Donor v. Recip, echo=T, fig.align='center', fig.width=6, fig.height=3}
+```{r Frequency Distribution Donor v. Recip, echo=T, fig.align='center', fig.width=12, fig.height=6}
 
 merged.df %>% 
   # Fix the recipient/contact naming difference
@@ -125,14 +129,16 @@ merged.df %>%
     xlab("Allele Frequency") + 
     ylab("Allele Count") + 
     scale_fill_manual(values = c("darkblue", "darkred"), name="") + 
-    theme_bw() + 
+    theme_bw(18) + 
     theme(legend.position = "bottom")
+
+ggsave("frequency_distribution_by_pair.png", width = 12, height = 6, dpi = 300)
 
 ```
 
 Indeed, it seems to be the case the variants are higher frequency, even fixed, after transmission occurs. This is pretty neat, but one caveat is that time after infection could play a role. In other words, do variants tend to fix over time, or is a bottleneck at transmission fixing the variants? 
 
-```{r Frequency Distribution Time, echo=T, fig.align='center', fig.width=9, fig.height=3}
+```{r Frequency Distribution Time, echo=T, fig.align='center', fig.width=18, fig.height=6}
 
 merged.df %>% 
   filter(!SNP %in% fixed.isolate.variants,
@@ -144,8 +150,10 @@ merged.df %>%
     facet_wrap(~DPC, ncol=3) + 
     xlab("Allele Frequency") + 
     ylab("Allele Count") + 
-    theme_bw() + 
+    theme_bw(18) + 
     theme(legend.position = "bottom") 
+
+ggsave("frequency_distribution_by_time.png", width = 18, height = 6, dpi = 300)
 
 ```
 
@@ -155,7 +163,7 @@ Generally, there appear to be fewer low frequency variants relative to fixed var
 
 To be sure, let's check how the number of variants (excluding variants fixed in the stock) varies as a function of viral copy number and TCID50. 
 
-```{r Number of Variants v. Copies, echo=T, fig.align='center', fig.width=3, fig.height=3}
+```{r Number of Variants v. Copies, echo=T, fig.align='center', fig.width=6, fig.height=6}
 
 merged.df %>% 
   filter(!SNP %in% fixed.isolate.variants,
@@ -174,10 +182,11 @@ merged.df %>%
     theme(legend.position = "none",
           plot.title = element_text(hjust = 0.5))
     
+ggsave("variants_v_RNA_Copies.png", width = 6, height = 6, dpi = 300)
 
 ```
 
-```{r Number of Variants v. TCID50, echo=T, fig.align='center', fig.width=3, fig.height=3}
+```{r Number of Variants v. TCID50, echo=T, fig.align='center', fig.width=6, fig.height=6}
 
 merged.df %>% 
   filter(!SNP %in% fixed.isolate.variants,
@@ -196,6 +205,7 @@ merged.df %>%
     theme(legend.position = "none",
           plot.title = element_text(hjust = 0.5))
     
+ggsave("variants_v_TCID50.png", width = 6, height = 6, dpi = 300)
 
 ```
 
@@ -207,7 +217,7 @@ In the next analysis, I'll take these variants and attempt to calculate the tran
 
 First, I'll plot the distribution of variants shared across samples. 
 
-```{r All Shared Variants, echo = T, warning = F, fig.align='center', fig.width=3, fig.height=3}
+```{r All Shared Variants, echo = T, warning = F, fig.align='center', fig.width=6, fig.height=6}
 
 number.of.conditions = merged.df %>% select(Animal, DPI) %>% distinct() %>% nrow()
 
@@ -222,11 +232,13 @@ merged.df %>%
     scale_x_continuous(limits = c(0, number.of.conditions)) + 
     theme_bw()
 
+ggsave("variants_v_num_samples.png", width = 6, height = 6, dpi = 300)
+
 ```
 
 As expected, although the majority of variants are unique, many are shared between samples. Some appear common to every sample. It's likely that a significant fraction of these are variants that were present in the isolate. Let's filter these out and see how the distribution changes. 
 
-```{r Isolate Dropped Shared Variants, echo = T, warning = F, fig.align='center', fig.width=3, fig.height=3}
+```{r Isolate Dropped Shared Variants, echo = T, warning = F, fig.align='center', fig.width=6, fig.height=6}
 
 isolate.variants = merged.df %>% 
   filter(Animal == "stock") %>% 
@@ -247,11 +259,13 @@ merged.df %>%
     scale_x_continuous(limits = c(0, number.of.conditions)) + 
     theme_bw()
 
+ggsave("variants_v_num_samples_no_isolate.png", width = 6, height = 6, dpi = 300)
+
 ```
 
 This certainly improves the distribution. The question is whether the remaining variants are shared across experiments. This could indicate some kind of contamination or false variant that requires more stringency in the variant calling. 
 
-```{r Shared Variants Across Experiments, echo = T, warning = F, fig.align='center', fig.width=3, fig.height=3}
+```{r Shared Variants Across Experiments, echo = T, warning = F, fig.align='center', fig.width=6, fig.height=6}
 
 merged.df %>% 
   filter(Animal != "stock",
@@ -266,6 +280,8 @@ merged.df %>%
     xlab("Number of Experiments") +
     ylab("Number of Alleles") +
     theme_bw()
+
+ggsave("variants_v_num_experiments.png", width = 6, height = 6, dpi = 300)
 
 ```
 
